<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moj TVZ za Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">O aplikaciji</string>
    <string name="action_about_dialog">O aplikaciji</string>
    <string name="text_about_dialog">Verzija 3.1\nAutor: Marko Idžan\nAplikacija je objavljena na Amazon App Store
    </string>
    <string name="text_action_close_about_dialog">Zatvori</string>
    <string name="drawer_open">otvori</string>
    <string name="drawer_close">zatvori</string>
    <string name="mvij">Moje vijesti</string>
    <string name="mpred">Moji predmeti</string>
    <string name="ostud">Obavijesti studentima</string>
    <string name="ostdrefer">Obavijesti studentske referade</string>
    <string name="rsp">Raspored sati</string>
    <string name="odj">Odjava</string>
    <string name="oaplk">O aplikaciji</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
