<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mojvij"
            android:checked="true"
            android:title="@string/mvij"
            android:icon="@drawable/vijesti"/>
        <item
            android:id="@+id/mojpre"
            android:checked="true"
            android:title="@string/mpred"
            android:icon="@drawable/predmeti"/>
        <item
            android:id="@+id/obavst"
            android:checked="true"
            android:title="@string/ostud"
            android:icon="@drawable/studentske_opce"/>
        <item
            android:id="@+id/studrefer"
            android:checked="true"
            android:title="@string/ostdrefer"
            android:icon="@drawable/studentske_referada"/>
        <item
            android:id="@+id/rspst"
            android:checked="true"
            android:title="@string/rsp"
            android:icon="@drawable/raspored"/>
        <item
            android:id="@+id/odv"
            android:checked="true"
            android:title="@string/odj"
            android:icon="@drawable/odjava"/>
        <item
            android:id="@+id/aplabt"
            android:title="@string/oaplk"
            android:checked="true"
            android:icon="@drawable/aplikacija"/>
    </group>
</menu>